# ror-to-schema-org

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  prompts.md  pyproject.toml
docs/: template_analysis.md  template_implementation_example.md
docs/admin/: analysis.md  implementation_example.md
docs/domains/: analysis.md  implementation-example.md
docs/established/: analysis.md  implementation_example.md
docs/external_ids/: analysis.md  implementation_example.md
docs/id/: analysis.md  implementation_example.md
docs/links/: analysis.md  implementation_example.md
docs/locations/: analysis.md  implementation_example.md
docs/names/: analysis.md  implementation_example.md
docs/organization_types/: implementation_example.md  ror_organization_types_analysis.md
docs/relationships/: analysis.md  implementation_example.md
docs/status/: analysis.md  implementation_example.md
documentation/domains/: implementation-example.md
documentation/established/: analysis.md
documentation/names/: ror-names-mapping-analysis.md
mappings/sssom/: ror_to_schema.sssom.tsv  ror_to_schema_human_in_loop.sssom.tsv
mappings/tsv/: ror_to_schema_human_in_loop.tsv
v2/: ror_v2-1_schema_org.sssom.tsv  ror_v2-1_schema_org.tsv  ror_v2-1_schema_org_human_in_loop.sssom.tsv
v2/types/: depth_sorting_summary.md  ror_schema_type_mapping_simple.csv  ror_schema_type_mapping_simple.md  ror_schema_type_mapping_simple_sorted_by_depth.csv  ror_schema_type_mapping_simple_sorted_by_depth.md  ror_schema_type_mapping_summary.md  uri_vs_text_distinction_summary.md
